<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTeam</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Gender_Msg">Gender</string>
    <string name="Personal_details_msg"> Personal Details</string>
    <string name="Contact_details_msg">Contact Details</string>
    <string name="Login_details_msg">Login Details</string>
    <string name="For_Task_Id_msg">FOR TASK ID:</string>
     <string name="confirm_msg">CONFIRM</string>
    <string name="Email_details_msg">Email Details</string>
    <string name="Recovery_details_msg">Recovery Details</string>
    <string name="InTime_msg">COMPLETED IN TIME</string>
    <string name="OverallPerfrmce_msg">OVER ALL PERFORMANCE</string>
    <string name="Password_msg">Password</string>
     <string name="Edit_msg">EDIT</string>
    <string name="Leader_msg">LEADER</string>
    <string name="EstimatedDeadline_msg">Estimated Deadline:</string>
    <string name="CheckAvail_msg">CHECK AVAILABILITY</string>
    <string name="MoreTask_msg">MORE TASK</string>
    <string name="Update_msg">UPDATE</string>
    <string name="TaskDesc_msg">TASK DESCRIPTION</string>
 	<string name="LoginDetails_msg">Login Details</string>
    <string name="TaskSubj_msg">TASK SUBJECT</string>
    <string name="TaskTitle_msg">TASK TITLE</string>
    <string name="TaskLocation_msg">LOCATION</string>
    <string name="TaskDESCRIPTION_msg">---DESCRIPTION---</string>
    <string name="Sort_msg">SORT</string>
    <string name="Member_msg">MEMBER</string>
    <string name="AddComment_msg">ADD COMMENT</string>
    <string name="Members_msg">members</string>
    <string name="NoNotification_msg">No Notification for you....</string>
    <string name="Userid_msg">Enter UserName:</string>
    <string name="GrupID_msg">Group ID:</string>
    <string name="Comment_msg">COMMENT</string>
    <string name="NewPassword_msg">Enter NEW Password:</string>
    <string name="EmployeeType_Hdr_msg">SELECT TYPE</string>
    <string name="Notification_msg">Notifications:</string>
    <string name="EmailID_msg">Enter VALID E-Mail Address:</string>
    <string name="Welcome_msg">WEL-COME</string>
    <string name="NewAccount_msg">NEW ACCOUNT</string>
    <string name="Login_msg">Login</string>
    <string name="BelowLogin_msg">Welcome to MyTeam..</string>
    <string name="Username_msg">Username</string>
    <string name="RememberMe_msg">Remember Me</string>
    <string name="SecurityQuestion_msg">Security Question.</string>
    <string name="ForgotPassword_msg">Forgot Password?</string>
    <string name="JoinNow_msg">JOIN NOW!</string>
    <string name="NoTeam_msg">NO TEAM JOINT..</string>
    <string name="Submit_msg">SUBMIT</string>
    <string name="StartDt_msg">START DATE</string>
    <string name="EndDt_msg">END DATE</string>
    <string name="UnsetDate_msg">[--/--/----]</string>
    <string name="CompleteThisStep_msg">Please complete this step to proceed..</string>
    <string name="HOME_msg">HOME</string>
    <string name="TEAM_msg">TEAM</string>
    <string name="TASK_msg">TASK</string>
    <string name="LeaderName_msg">Leader Name:</string>
    <string name="MORE_msg">MORE</string>
    <string name="AddNewTask_msg">ADD NEW TASK</string>
    <string name="UPLOAD_Pic_msg">UPLOAD A PROFILE PIC:[optional]</string>
    <string name="EmailPassword_msg">Enter PASSWORD:</string>
    <string name="First_name_Hint">First Name..</string>
    <string name="Last_Name_Hint">Last Name..</string>
    <string name="Date_Hint">[----/--/--]</string>
    <string name="Designation_Hint">Designation..</string>
    <string name="Address_Hint">Address..</string>
    <string name="Answer_Hint">Answer</string>
    <string name="City_Hint">City..</string>
    <string name="Email_Hint">Email ID</string>
    <string name="Mobile_Hint">Mobile No..</string>
    <string name="Pass_Reenter_Hint">Re-Enter Password..</string>
    <string name="EXIT_msg">EXIT</string>
    <string name="NEXT_msg">NEXT</string>
    <string name="PROCEED_msg">PROCEED</string>
    <string name="BACK_msg">BACK</string>
    <string name="Performance_msg">View Performance</string>

    <color name="White">#FFFFFF</color>
    <color name="Ivory">#FFFFF0</color>
    <color name="LightYellow">#FFFFE0</color>
    <color name="Yellow">#FFFF00</color>
    <color name="Snow">#FFFAFA</color>
    <color name="FloralWhite">#FFFAF0</color>
    <color name="LemonChiffon">#FFFACD</color>
    <color name="Cornsilk">#FFF8DC</color>
    <color name="Seashell">#FFF5EE</color>
    <color name="LavenderBlush">#FFF0F5</color>
    <color name="PapayaWhip">#FFEFD5</color>
    <color name="BlanchedAlmond">#FFEBCD</color>
    <color name="MistyRose">#FFE4E1</color>
    <color name="Bisque">#FFE4C4</color>
    <color name="Moccasin">#FFE4B5</color>
    <color name="NavajoWhite">#FFDEAD</color>
    <color name="PeachPuff">#FFDAB9</color>
    <color name="Gold">#FFD700</color>
    <color name="Pink">#FFC0CB</color>
    <color name="LightPink">#FFB6C1</color>
    <color name="Orange">#FFA500</color>
    <color name="LightSalmon">#FFA07A</color>
    <color name="DarkOrange">#FF8C00</color>
    <color name="Coral">#FF7F50</color>
    <color name="HotPink">#FF69B4</color>
    <color name="Tomato">#FF6347</color>
    <color name="OrangeRed">#FF4500</color>
    <color name="DeepPink">#FF1493</color>
    <color name="Fuchsia">#FF00FF</color>
    <color name="Magenta">#FF00FF</color>
    <color name="Red">#FF0000</color>
    <color name="OldLace">#FDF5E6</color>
    <color name="LightGoldenrodYellow">#FAFAD2</color>
    <color name="Linen">#FAF0E6</color>
    <color name="AntiqueWhite">#FAEBD7</color>
    <color name="Salmon">#FA8072</color>
    <color name="GhostWhite">#F8F8FF</color>
    <color name="MintCream">#F5FFFA</color>
    <color name="WhiteSmoke">#F5F5F5</color>
    <color name="Beige">#F5F5DC</color>
    <color name="Wheat">#F5DEB3</color>
    <color name="SandyBrown">#F4A460</color>
    <color name="Azure">#F0FFFF</color>
    <color name="Honeydew">#F0FFF0</color>
    <color name="AliceBlue">#F0F8FF</color>
    <color name="Khaki">#F0E68C</color>
    <color name="LightCoral">#F08080</color>
    <color name="PaleGoldenrod">#EEE8AA</color>
    <color name="Violet">#EE82EE</color>
    <color name="DarkSalmon">#E9967A</color>
    <color name="Lavender">#E6E6FA</color>
    <color name="LightCyan">#E0FFFF</color>
    <color name="BurlyWood">#DEB887</color>
    <color name="Plum">#DDA0DD</color>
    <color name="Gainsboro">#DCDCDC</color>
    <color name="Crimson">#DC143C</color>
    <color name="PaleVioletRed">#DB7093</color>
    <color name="Goldenrod">#DAA520</color>
    <color name="Orchid">#DA70D6</color>
    <color name="Thistle">#D8BFD8</color>
    <color name="LightGrey">#D3D3D3</color>
    <color name="Tan">#D2B48C</color>
    <color name="Chocolate">#D2691E</color>
    <color name="Peru">#CD853F</color>
    <color name="IndianRed">#CD5C5C</color>
    <color name="MediumVioletRed">#C71585</color>
    <color name="Silver">#C0C0C0</color>
    <color name="DarkKhaki">#BDB76B</color>
    <color name="RosyBrown">#BC8F8F</color>
    <color name="MediumOrchid">#BA55D3</color>
    <color name="DarkGoldenrod">#B8860B</color>
    <color name="FireBrick">#B22222</color>
    <color name="PowderBlue">#B0E0E6</color>
    <color name="LightSteelBlue">#B0C4DE</color>
    <color name="PaleTurquoise">#AFEEEE</color>
    <color name="GreenYellow">#ADFF2F</color>
    <color name="LightBlue">#ADD8E6</color>
    <color name="DarkGray">#A9A9A9</color>
    <color name="Brown">#A52A2A</color>
    <color name="Sienna">#A0522D</color>
    <color name="YellowGreen">#9ACD32</color>
    <color name="DarkOrchid">#9932CC</color>
    <color name="PaleGreen">#98FB98</color>
    <color name="DarkViolet">#9400D3</color>
    <color name="MediumPurple">#9370DB</color>
    <color name="LightGreen">#90EE90</color>
    <color name="DarkSeaGreen">#8FBC8F</color>
    <color name="SaddleBrown">#8B4513</color>
    <color name="DarkMagenta">#8B008B</color>
    <color name="DarkRed">#8B0000</color>
    <color name="BlueViolet">#8A2BE2</color>
    <color name="LightSkyBlue">#87CEFA</color>
    <color name="SkyBlue">#87CEEB</color>
    <color name="Gray">#808080</color>
    <color name="Olive">#808000</color>
    <color name="Purple">#800080</color>
    <color name="Maroon">#800000</color>
    <color name="Aquamarine">#7FFFD4</color>
    <color name="Chartreuse">#7FFF00</color>
    <color name="LawnGreen">#7CFC00</color>
    <color name="MediumSlateBlue">#7B68EE</color>
    <color name="LightSlateGray">#778899</color>
    <color name="SlateGray">#708090</color>
    <color name="OliveDrab">#6B8E23</color>
    <color name="SlateBlue">#6A5ACD</color>
    <color name="DimGray">#696969</color>
    <color name="MediumAquamarine">#66CDAA</color>
    <color name="CornflowerBlue">#6495ED</color>
    <color name="CadetBlue">#5F9EA0</color>
    <color name="DarkOliveGreen">#556B2F</color>
    <color name="Indigo">#4B0082</color>
    <color name="MediumTurquoise">#48D1CC</color>
    <color name="DarkSlateBlue">#483D8B</color>
    <color name="SteelBlue">#4682B4</color>
    <color name="RoyalBlue">#4169E1</color>
    <color name="Turquoise">#40E0D0</color>
    <color name="MediumSeaGreen">#3CB371</color>
    <color name="LimeGreen">#32CD32</color>
    <color name="DarkSlateGray">#2F4F4F</color>
    <color name="SeaGreen">#2E8B57</color>
    <color name="ForestGreen">#228B22</color>
    <color name="LightSeaGreen">#20B2AA</color>
    <color name="DodgerBlue">#1E90FF</color>
    <color name="MidnightBlue">#191970</color>
    <color name="Aqua">#00FFFF</color>
    <color name="Cyan">#00FFFF</color>
    <color name="SpringGreen">#00FF7F</color>
    <color name="Lime">#00FF00</color>
    <color name="MediumSpringGreen">#00FA9A</color>
    <color name="DarkTurquoise">#00CED1</color>
    <color name="DeepSkyBlue">#00BFFF</color>
    <color name="DarkCyan">#008B8B</color>
    <color name="Teal">#008080</color>
    <color name="Green">#008000</color>
    <color name="DarkGreen">#006400</color>
    <color name="Blue">#0000FF</color>
    <color name="MediumBlue">#0000CD</color>
    <color name="DarkBlue">#00008B</color>
    <color name="Navy">#000080</color>
    <color name="Black">#000000</color>
<color name="MyTeam_TextColor">#FFFFFF</color>
<color name="MyTeam_ButtonColor">#98FB98</color>
<color name="MyTeam_HeaderColor">#000000</color>
</resources>