<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mt_mainbackground" >

    <RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="5dip"
    android:layout_centerInParent="true">
    <TextView
        android:id="@+id/ENPS_Pass_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dip"
        android:background="@drawable/header_background"
        android:text="@string/NewPassword_msg"
        android:textColor="@color/MyTeam_TextColor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ENPS_Password_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ENPS_Pass_msg"
        android:layout_alignRight="@+id/ENPS_Pass_msg"
        android:layout_below="@+id/ENPS_Pass_msg"
        android:background="@drawable/text_bk_theme"
        android:ellipsize="start"
        android:ems="10"
        android:textColor="@color/MyTeam_TextColor"
        android:gravity="center"
        android:hint="@string/Password_msg"
        android:inputType="textPassword"
        android:textColorHint="@color/YellowGreen" >
    </EditText>

    <EditText
        android:id="@+id/ENPS_RePassword_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/MyTeam_TextColor"
        android:layout_alignLeft="@+id/ENPS_Pass_msg"
        android:layout_alignRight="@+id/ENPS_Pass_msg"
        android:layout_below="@+id/ENPS_Password_Txt"
        android:background="@drawable/text_bk_theme"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Pass_Reenter_Hint"
        android:inputType="textPassword"
        android:textColorHint="@color/YellowGreen" >
    </EditText>
</RelativeLayout>
    <LinearLayout
        android:id="@+id/ENPS_Button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ENPS_Back_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dip"
            android:textColor="@color/MyTeam_ButtonColor"
            android:padding="20dip"
            android:background="@drawable/button_bk_theme"
            android:text="@string/BACK_msg" />

        <Button
            android:id="@+id/ENPS_Submit_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dip"
            android:layout_margin="5dip"
            android:textColor="@color/MyTeam_ButtonColor"
            android:background="@drawable/button_bk_theme"
            android:text="@string/Submit_msg" />
    </LinearLayout>

</RelativeLayout>